--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,12 @@ body{
     justify-content: center;
 }
 
+.container {
+    width: 50vh;
+    border-radius: 5px;
+    border: 0.5px solid lightseagreen;
+}
+
 input{
     width: 50%;
     padding: 10px;
@@ -27,4 +33,12 @@ button {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+}
+
+.userName {
+    font-weight: bold;
+    color: lightseagreen;
+    position: absolute;
+    top: 15px;
+    right: 20px;
 }
